bug: upload avatar
