# src/routes/specifications.routes.ts
@@ -1,11 +1,12 @@
 import { Router } from 'express';
-
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
+import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController()
+
+specificationsRoutes.use(ensureAuthenticated)
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
